adds more words

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,9 @@
 {
     "cSpell.words": [
         "classif",
-        "ndarray"
+        "hstack",
+        "ndarray",
+        "preds",
+        "todense"
     ]
 }
