--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,8 @@
-numpy==1.24.2
+numpy==1.24.4
 pandas==1.5.3
+pandas==2.0.3
 pygad==3.2.0
 pyitlib==0.2.3
-scikit_learn==0.24
+scikit_learn==0.24.0
 scikit_multilearn==0.2.0
-pytest==7.1.2
-arff==0.9
-requests==2.26
+scipy==1.4.1
