--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
-numpy==1.24.4
-pandas==1.5.3
-pandas==2.0.3
-pygad==3.2.0
+numpy==1.26.4
+pandas==2.2.1
+pygad==3.3.1
 pyitlib==0.2.3
 scikit_learn==0.24.0
 scikit_multilearn==0.2.0
-scipy==1.4.1
+scipy==1.12.0
 arff==0.9
+pytest==8.1.1
+requests==2.31.0
